--- a/index.html
+++ b/index.html
@@ -1,115 +1,112 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Capstone Project</title>
-  
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>notekeeper project</title>
 </head>
 <body>
-  <h1>Capstone Project </h1>
-  <form id="taskForm">
-    <input type="text" id="taskInput" placeholder="Enter a task">
-    <button type="submit">Add Task</button>
-  </form>
-  <ul id="taskList"></ul>
+   <header>
+    <h1>notekeeper project</h1>
+    <button id="deleteallnotes">
+        delete all notes
 
- 
+    </button>
+   </header>
+   <section class="noteslist">
+
+   </section>
+   <hr>
+   <section>
+    <h2>create new note</h2>
+    <div class="createnote">
+        <input type="text" id="createnotetitle" placeholder="enter note title">
+        <textarea id="createnotecontent" name="" id="" cols="30" rows="10"></textarea>
+        <button id="createnotebutton">createnote</button>
+    </div>
+   </section>
+
+
+    <script type="module" src="./main.js"></script>
+
+    
 </body>
 </html>
 <style>
-        body {
-    text-align: center;
+    *{
+        margin: 0;
+        padding: 0;
+
+    }
+    body{
+        background:white ;
+    }
+    header{
+        background: white;
+        display: flex;
+        justify-content: space-between;
+        padding: 1rem;
+    }
+    h1{
+        color: green;
+    }
+    .notelist{
+        display: grid;
+        grid-template-columns:repeat(4,1fr) ;
+
+    }
+    .note{
+        background: white;
+        border: 1px solid darkcyan;
+        border-radius: 12px;
+        padding: 1rem;
+        margin: 1rem;
+    }
+    .note button{
+        background: darkgreen;
+        color:white ;
+        font-weight: bold;
+        cursor: pointer;
+        padding: 0.8rem 0;
+        border: none;
+        margin: 0.8rem 0;
+        border-radius: 12px;
+    }
+    .createnote{
+        background:white ;
+        border: 1px solid darkgrey;
+        padding: 1rem;
+        width: 40vw;
+        border-radius: 12px;
+
+    }
+    input, textarea{
+        display: block;
+        outline: none;
+       border: none;
+       border-bottom: 1px solid darkseagreen;
+       margin: 0.8rem 0;
+
+    }
+    #createnotebutton{
+        background: red;
+        color:white ;
+        font-weight: bold;
+        cursor: pointer;
+        padding: 0.8rem 0;
+        border: none;
+        margin: 0.8rem 0;
+        border-radius: 12px;
+
+
+    }
+    h2{
+        margin: 1rem;
+    }
+    #deleteallnotes{
+        color:red;
+        background:whitesmoke;
     }
 
-    h1 {
-    color: #333;
-    }
 
-    form {
-    margin-bottom: 20px;
-    }
-
-    input[type="text"] {
-    padding: 10px;
-    width: 300px;
-    }
-
-    button[type="submit"] {
-    padding: 10px 20px;
-    background-color: #4CAF50;
-    color: #fff;
-    border: none;
-    cursor: pointer;
-    }
-
-    button[type="submit"]:hover {
-    background-color: #45a049;
-    }
-
-    .task {
-    margin-bottom: 10px;
-    list-style-type: none;
-    }
-
-    .task button {
-    padding: 5px 10px;
-    background-color: #f44336;
-    color: #fff;
-    border: none;
-    cursor: pointer;
-    }
-
-    .task button:hover {
-    background-color: #da190b;
-    }
 </style>
-<script>
-    document.getElementById('taskForm').addEventListener('submit', addTask);
-
-
-    window.addEventListener('load', function () {
-    var tasks = JSON.parse(localStorage.getItem('tasks')) || [];
-    tasks.forEach(function (task) {
-        addTaskToList(task);
-    });
-    });
-
-    function addTask(event) {
-    event.preventDefault();
-
-    var taskInput = document.getElementById('taskInput');
-    var taskValue = taskInput.value;
-
-    if (taskValue !== '') {
-        addTaskToList(taskValue);
-        saveTaskToLocalStorage(taskValue);
-        taskInput.value = '';
-    }
-    }
-
-    function addTaskToList(taskValue) {
-    var taskList = document.getElementById('taskList');
-    var taskItem = document.createElement('li');
-
-    taskItem.classList.add('task');
-    taskItem.innerHTML = taskValue + ' <button onclick="deleteTask(this)">Delete</button>';
-
-    taskList.appendChild(taskItem);
-    }
-
-    function saveTaskToLocalStorage(taskValue) {
-    var tasks = JSON.parse(localStorage.getItem('tasks')) || [];
-    tasks.push(taskValue);
-    localStorage.setItem('tasks', JSON.stringify(tasks));
-    }
-
-    function deleteTask(button) {
-    var taskItem = button.parentNode;
-    var taskValue = taskItem.firstChild.textContent.trim();
-
-    var tasks = JSON.parse(localStorage.getItem('tasks'));
-    tasks.splice(tasks.indexOf(taskValue), 1);
-    localStorage.setItem('tasks', JSON.stringify(tasks));
-
-    taskItem.parentNode.removeChild(taskItem);
-    }
-</script>
